# weavepy

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
conformance/corpus/: README.md  args_star_call.py  args_star_def.py  async_def.py  async_for.py  async_with.py  await_basic.py  bytes_array.py  bytes_literal.py  bytes_methods.py  cls_classmethod.py  cls_descriptor.py  cls_dunder_add.py  cls_inheritance.py  cls_init_subclass.py  cls_metaclass.py  cls_property.py  cls_simple.py  cls_slots.py  deco_simple.py  del_simple.py  exc_raise_from.py  exc_try_except.py  exc_try_finally.py  fmt_format.py  fmt_percent.py  fstr_conversions.py  fstr_format_spec.py  fstr_plain.py  gen_basic.py  gen_expr.py  gen_yield_from.py  imp_abc_basic.py  imp_abc_register.py  imp_aliased.py  imp_asyncio.py  (+45 more)
crates/weavepy/: Cargo.toml
crates/weavepy-bench/: Cargo.toml  README.md
crates/weavepy-bench/baselines/: bench.json
crates/weavepy-bench/fixtures/: fannkuch.py  fib.py  jitloop.py  nbody.py  nested_loops.py  pidigits.py  pyaes.py  richards.py  sumvm.py
crates/weavepy-bench/src/: fixtures.rs  lib.rs  main.rs  report.rs  runner.rs  stats.rs
crates/weavepy-capi/: Cargo.toml  build.rs
crates/weavepy-capi/include/: Python.h
crates/weavepy-capi/src/: abstract_.rs  argparse.rs  buffer.rs  buffer_format.rs  builtin_new.rs  builtin_slots.rs  capsule.rs  code_obj.rs  containers.rs  datetime_api.rs  dunder_shim.rs  errors.rs  ffi.rs  force_link_table.rs  foreign.rs  gc_bridge.rs  genericalloc.rs  getset.rs  inherit.rs  instance.rs  interp.rs  layout.rs  lib.rs  lifecycle.rs  loader.rs  memory.rs  memoryview.rs  mirror.rs  module.rs  monitoring.rs  numbers.rs  numbers_format.rs  object.rs  pystate.rs  singletons.rs  slice.rs  slottable.rs  strings.rs  types.rs  varargs.c  (+4 more)
crates/weavepy-capi/tests/: capi_buffer.rs  capi_loader.rs  capi_ndarray.rs  capi_numpylike.rs  capi_stockabi.rs  capi_stockarray.rs  capi_stockcython.rs  capi_stockdatetime.rs  capi_stocktype.rs  capi_wheel_endtoend.rs  force_link_completeness.rs
crates/weavepy-cli/: Cargo.toml  build.rs
crates/weavepy-cli/src/: main.rs  regrtest_cmd.rs  repl.rs
crates/weavepy-cli/tests/: m_test.rs
crates/weavepy-compiler/: Cargo.toml
crates/weavepy-compiler/src/: bytecode.rs  cpython_code.rs  lib.rs  mangle.rs  validate.rs
crates/weavepy-conformance/: Cargo.toml
crates/weavepy-conformance/src/: corpus.rs  lib.rs  normalize.rs  oracle.rs  regrtest.rs  report.rs  runner.rs
crates/weavepy-jit/: Cargo.toml
crates/weavepy-jit/src/: analyze.rs  engine.rs  ir.rs  lib.rs  lower.rs  runtime.rs  value.rs
crates/weavepy-jit/tests/: numeric.rs
crates/weavepy-lexer/: Cargo.toml
crates/weavepy-lexer/src/: error.rs  lib.rs  scanner.rs  token.rs
crates/weavepy-parser/: Cargo.toml
crates/weavepy-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/weavepy-vm/: Cargo.toml
crates/weavepy-vm/src/: builtin_types.rs  builtins.rs  descr_registry.rs  error.rs  ext_loader.rs  foreign.rs  frozen_code_cache.rs  gc_trace.rs  gil.rs  import.rs  lib.rs  object.rs  proc_init.rs  pycache.rs  recursion.rs  specialize.rs  sync.rs  thread_registry.rs  tier2.rs  trace.rs  type_surface.rs  types.rs  vm_singletons.rs  weakref_registry.rs
crates/weavepy-vm/src/stdlib/: abc_mod.rs  ast_mod.rs  atexit_mod.rs  base64_mod.rs  binascii_mod.rs  bisect_accel.rs  bz2_mod.rs  codecs_mod.rs  contextvars_mod.rs  csv_mod.rs  ctypes_native.rs  datetime_mod.rs  errno_mod.rs  faulthandler_mod.rs  fcntl_mod.rs  fnmatch_mod.rs  functools_mod.rs  gc_mod.rs  gc_real.rs  glob_mod.rs  gzip_mod.rs  hashlib_mod.rs  heapq_accel.rs  hmac_mod.rs  https_mod.rs  imp_mod.rs  interpreters_mod.rs  io.rs  io_full.rs  itertools_mod.rs  json.rs  json_accel.rs  locale_mod.rs  lzma_mod.rs  marshal_mod.rs  math.rs  mmap_mod.rs  mod.rs  multiprocessing_mod.rs  operator_accel.rs  (+38 more)
crates/weavepy-vm/src/stdlib/ctypes_native/: ffi.rs
crates/weavepy-vm/src/stdlib/ctypes_native/ffi/: native.rs
crates/weavepy-vm/src/stdlib/python/: _codec_euc_jis_2004.py  _collections.py  _collections_abc.py  _collections_user.py  _concurrent_process.py  _ctypes.py  _minipip.py  _multiprocessing_helpers.py  _numpy_pure.py  _oswalk.py  _packaging.py  _pep517.py  _pip_resolver.py  _pluggy.py  _py_abc.py  _pyio.py  _pyrepl_init.py  _pytest.py  _scproxy.py  _seqtools.py  _testcapi.py  _testlimitedcapi.py  _threading_local.py  _weave_envinit.py  _weave_import_fallback.py  abc.py  argparse.py  array_mod.py  ast.py  asyncio.py  base64_mod.py  bdb_mod.py  bisect_mod.py  builtins.py  bz2.py  cmath.py  cmd_mod.py  code.py  codecs.py  codeop.py  (+153 more)
crates/weavepy-vm/src/stdlib/python/asyncio/: __init__.py  tasks.py
crates/weavepy-vm/src/stdlib/python/encodings/: __init__.py
crates/weavepy-vm/src/stdlib/python/multiprocessing/: __init__.py  spawn.py
crates/weavepy/examples/: dis_dump.rs
crates/weavepy/src/: lib.rs
crates/weavepy/tests/: fixtures.rs
crates/weavepy/tests/fixtures/run/: 01_arith.out  01_arith.py  02_control_flow.out  02_control_flow.py  03_functions.out  03_functions.py  04_closures.out  04_closures.py  05_collections.out  05_collections.py  06_comprehensions.out  06_comprehensions.py  07_strings.out  07_strings.py  08_lambda_chained.out  08_lambda_chained.py  09_fizzbuzz.py  100_rfc0025_cross_thread_heap.out  100_rfc0025_cross_thread_heap.py  101_rfc0025_daemon_and_join.out  101_rfc0025_daemon_and_join.py  102_rfc0025_distinct_native_threads.out  102_rfc0025_distinct_native_threads.py  10_classes_basic.out  10_classes_basic.py  11_classes_inheritance.out  11_classes_inheritance.py  12_exceptions.out  12_exceptions.py  13_with_statement.out  13_with_statement.py  14_iter_protocol.out  14_iter_protocol.py  15_dunders.out  15_dunders.py  16_import_math.out  16_import_math.py  17_import_as.out  17_import_as.py  18_from_import.out  (+137 more)
crates/weavepy/tests/fixtures/run/_pkg/: __init__.py  core.py
docs/: ARCHITECTURE.md  CONFORMANCE.md
(+132 files in other folders)
