[workspace]
resolver = "2"
members = [
    "crates/weavepy",
    "crates/weavepy-bench",
    "crates/weavepy-capi",
    "crates/weavepy-cli",
    "crates/weavepy-compiler",
    "crates/weavepy-conformance",
    "crates/weavepy-lexer",
    "crates/weavepy-parser",
    "crates/weavepy-vm",
]
# `weavepy-conformance` and `weavepy-bench` are development tools that shell
# out to `python3` and aren't useful to publish or to compile by default.
# Keep them out of `default-members` so `cargo build/test --workspace`
# stays light; opt in explicitly via `-p weavepy-conformance` /
# `-p weavepy-bench`.
default-members = [
    "crates/weavepy",
    "crates/weavepy-capi",
    "crates/weavepy-cli",
    "crates/weavepy-compiler",
    "crates/weavepy-lexer",
    "crates/weavepy-parser",
    "crates/weavepy-vm",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/weavefoundry/weavepy"
homepage = "https://github.com/weavefoundry/weavepy"
authors = ["The WeavePy Authors"]
readme = "README.md"
keywords = ["python", "interpreter", "compiler", "language", "vm"]
categories = ["compilers", "development-tools", "parser-implementations"]

[workspace.dependencies]
# Internal crates (path deps so the workspace builds without publishing).
weavepy             = { path = "crates/weavepy",             version = "0.0.0" }
weavepy-capi        = { path = "crates/weavepy-capi",        version = "0.0.0" }
weavepy-compiler    = { path = "crates/weavepy-compiler",    version = "0.0.0" }
weavepy-conformance = { path = "crates/weavepy-conformance", version = "0.0.0" }
weavepy-lexer       = { path = "crates/weavepy-lexer",       version = "0.0.0" }
weavepy-parser      = { path = "crates/weavepy-parser",      version = "0.0.0" }
weavepy-vm          = { path = "crates/weavepy-vm",          version = "0.0.0" }

# Third-party.
anyhow      = "1.0"
chrono      = { version = "0.4", default-features = false, features = ["clock"] }
clap        = { version = "4.5", features = ["derive", "wrap_help"] }
indexmap    = "2.5"
regex       = "1.10"
fancy-regex = "0.13"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "2.0"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-ident = "1.0"
walkdir     = "2.5"

# RFC 0017 — OS interface, networking, subprocess.
mio         = { version = "1.0", features = ["os-poll", "os-ext", "net"] }
socket2     = { version = "0.5", features = ["all"] }
sha2        = "0.10"
sha1        = "0.10"
md-5        = "0.10"
digest      = "0.10"
hmac        = "0.12"
base64      = "0.22"
crc32fast   = "1.4"
flate2      = { version = "1.0", default-features = false, features = ["rust_backend"] }

# RFC 0019 — numerics and serialization.
num-bigint  = "0.4"
num-integer = "0.1"
num-traits  = "0.2"
num-rational = "0.4"
byteorder   = "1.5"
encoding_rs = "0.8"
bzip2       = { version = "0.4", features = ["static"] }
xz2         = "0.1"
rusqlite    = { version = "0.31", features = ["bundled"] }
rust_decimal = "1.36"

# RFC 0020 — interactive REPL + CLI surface.
rustyline   = { version = "14.0", default-features = false, features = ["with-file-history"] }
dirs        = "5.0"

# RFC 0022 — C-API foundation (dlopen + cc-driven extension build harness).
libloading  = "0.8"
cc          = "1.0"

# RFC 0023 — drop-in stdlib parity + HTTPS.
unicode-normalization = "0.1"
unicode-properties    = "0.1"
memmap2               = "0.9"
libc                  = "0.2"
rustls                = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types      = "1.7"
rustls-pemfile        = "2.1"
rustls-native-certs   = "0.7"
webpki-roots          = "0.26"

# RFC 0024 — real OS threads, GIL, cycle GC, weakrefs.
parking_lot           = "0.12"
crossbeam-channel     = "0.5"
crossbeam-utils       = "0.8"

# Test/bench-only.
insta       = { version = "1.40", features = ["yaml"] }
proptest    = "1.5"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub        = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
# Sensible-but-strict default. Loosen per-crate as needed.
all       = { level = "warn", priority = -1 }
pedantic  = { level = "warn", priority = -1 }
# Pragmatic opt-outs from `pedantic` that fire too often during early development:
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
must_use_candidate      = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value  = "allow"
# Cast lints are unavoidable in an interpreter (i64↔u32↔usize↔f64
# crossings are everywhere by design — opcode args, indices,
# numeric coercions). We accept them globally and rely on hand
# review for the few cases that actually matter.
cast_possible_truncation = "allow"
cast_possible_wrap      = "allow"
cast_sign_loss          = "allow"
cast_precision_loss     = "allow"
# Stylistic preferences that fight legitimate manual patterns:
manual_assert           = "allow"
too_many_lines          = "allow"
similar_names           = "allow"
match_same_arms         = "allow"
single_match_else       = "allow"
unnecessary_wraps       = "allow"
items_after_statements  = "allow"
inline_always           = "allow"
explicit_iter_loop      = "allow"
doc_markdown            = "allow"
unused_self             = "allow"
manual_let_else         = "allow"
format_push_string      = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools  = "allow"
needless_continue       = "allow"
nonminimal_bool         = "allow"
if_not_else             = "allow"
needless_pass_by_ref_mut = "allow"
collapsible_if          = "allow"
collapsible_else_if     = "allow"
ignored_unit_patterns   = "allow"
single_char_add_str     = "allow"
field_reassign_with_default = "allow"
needless_for_each       = "allow"
explicit_into_iter_loop = "allow"
naive_bytecount         = "allow"
manual_strip            = "allow"
should_implement_trait  = "allow"
type_complexity         = "allow"
only_used_in_recursion  = "allow"
redundant_closure_for_method_calls = "allow"
unnested_or_patterns    = "allow"
many_single_char_names  = "allow"
uninlined_format_args   = "allow"
map_unwrap_or           = "allow"
unnecessary_lazy_evaluations = "allow"
assigning_clones        = "allow"
semicolon_if_nothing_returned = "allow"
wildcard_in_or_patterns = "allow"
match_wildcard_for_single_variants = "allow"
if_same_then_else       = "allow"
single_match            = "allow"
manual_map              = "allow"
comparison_chain        = "allow"
unnecessary_cast        = "allow"
len_without_is_empty    = "allow"

# Profiles tuned for an interpreter: aggressive release, fast incremental dev.
[profile.dev]
opt-level   = 0
debug       = true
incremental = true

[profile.dev.package."*"]
# Compile dependencies with some optimization so dev runs aren't painful.
opt-level = 1

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
debug         = "line-tables-only"
strip         = "debuginfo"
panic         = "unwind"

[profile.bench]
inherits = "release"
debug    = true

# A profile for shipping a maximally-optimized interpreter binary.
[profile.dist]
inherits      = "release"
lto           = "fat"
codegen-units = 1
strip         = "symbols"
