[package]
name = "weavepy-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "RFC 0021 — pyperformance-shaped microbench harness for WeavePy."

[lib]
path = "src/lib.rs"

[[bin]]
name = "weavepy-bench"
path = "src/main.rs"

[dependencies]
weavepy = { workspace = true }
weavepy-compiler = { workspace = true }
weavepy-parser = { workspace = true }
weavepy-vm = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
# RFC 0032 — run the bench harness with the tier-2 JIT compiled in.
jit = ["weavepy/jit", "weavepy-vm/jit"]

[lints]
workspace = true
