[package]
name = "weavepy-capi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
description = "WeavePy C-API bridge: a CPython-3.13-compatible C-API surface for native extension modules."

[lints]
workspace = true

[features]
default = []

[dependencies]
weavepy-vm      = { workspace = true }
weavepy-compiler = { workspace = true }
libloading      = { workspace = true }
num-bigint      = { workspace = true }
num-traits      = { workspace = true }
thiserror       = { workspace = true }

[build-dependencies]
cc = "1.2"

[dev-dependencies]
weavepy   = { workspace = true }
tempfile  = "3"
