[package]
name = "weavepy-cli"
description = "Command-line entry point for the WeavePy interpreter (the `weavepy` binary)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[[bin]]
name = "weavepy"
path = "src/main.rs"

[dependencies]
weavepy            = { workspace = true }
weavepy-vm         = { workspace = true }
weavepy-parser     = { workspace = true }
weavepy-compiler   = { workspace = true }
weavepy-conformance = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
serde_json         = { workspace = true }
rustyline          = { workspace = true }
dirs               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
# RFC 0032 — build the `weavepy` binary with the tier-2 JIT compiled in
# (still gated at runtime by `WEAVEPY_JIT=1`).
jit = ["weavepy/jit", "weavepy-vm/jit"]

[lints]
workspace = true
