[package]
name = "weavepy-jit"
description = "RFC 0032 — tier-2 Cranelift JIT for WeavePy's unboxed numeric frames."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
publish = false

[dependencies]
weavepy-compiler   = { workspace = true }
cranelift-codegen  = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-jit      = { workspace = true }
cranelift-module   = { workspace = true }
cranelift-native   = { workspace = true }

[lints]
workspace = true
