[package]
name = "weavepy-vm"
description = "Bytecode interpreter and runtime object model for WeavePy."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
weavepy-compiler = { workspace = true }
weavepy-lexer    = { workspace = true }
weavepy-parser   = { workspace = true }
chrono           = { workspace = true }
indexmap         = { workspace = true }
regex            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }

# RFC 0017 — OS interface, networking, subprocess.
mio              = { workspace = true }
socket2          = { workspace = true }
sha2             = { workspace = true }
sha1             = { workspace = true }
md-5             = { workspace = true }
digest           = { workspace = true }
hmac             = { workspace = true }
base64           = { workspace = true }
crc32fast        = { workspace = true }
flate2           = { workspace = true }

# RFC 0019 — numerics and serialization.
num-bigint       = { workspace = true }
num-integer      = { workspace = true }
num-traits       = { workspace = true }
num-rational     = { workspace = true }
byteorder        = { workspace = true }
encoding_rs      = { workspace = true }
bzip2            = { workspace = true }
xz2              = { workspace = true }
rusqlite         = { workspace = true }
rust_decimal     = { workspace = true }

[lints]
workspace = true
