[package]
name = "weavepy-vm"
description = "Bytecode interpreter and runtime object model for WeavePy."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
weavepy-compiler = { workspace = true }
weavepy-lexer    = { workspace = true }
weavepy-parser   = { workspace = true }
chrono           = { workspace = true }
indexmap         = { workspace = true }
regex            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }

# RFC 0017 — OS interface, networking, subprocess.
mio              = { workspace = true }
socket2          = { workspace = true }
sha2             = { workspace = true }
sha1             = { workspace = true }
md-5             = { workspace = true }
digest           = { workspace = true }
hmac             = { workspace = true }
base64           = { workspace = true }
crc32fast        = { workspace = true }
flate2           = { workspace = true }

# RFC 0019 — numerics and serialization.
num-bigint       = { workspace = true }
num-integer      = { workspace = true }
num-traits       = { workspace = true }
num-rational     = { workspace = true }
byteorder        = { workspace = true }
encoding_rs      = { workspace = true }
bzip2            = { workspace = true }
xz2              = { workspace = true }
rusqlite         = { workspace = true }
rust_decimal     = { workspace = true }

# RFC 0023 — drop-in stdlib parity + HTTPS.
unicode-normalization = { workspace = true }
unicode-properties    = { workspace = true }
memmap2               = { workspace = true }
libc                  = { workspace = true }
rustls                = { workspace = true }
rustls-pki-types      = { workspace = true }
rustls-pemfile        = { workspace = true }
rustls-native-certs   = { workspace = true }
webpki-roots          = { workspace = true }

# RFC 0024 — real OS threads, GIL, cycle GC, weakrefs.
parking_lot           = { workspace = true }
crossbeam-channel     = { workspace = true }
crossbeam-utils       = { workspace = true }

[lints]
workspace = true
