[package]
name = "weavepy"
description = "WeavePy: a high-performance, CPython-compatible Python interpreter written in Rust."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
weavepy-capi     = { workspace = true }
weavepy-compiler = { workspace = true }
weavepy-lexer    = { workspace = true }
weavepy-parser   = { workspace = true }
weavepy-vm       = { workspace = true }
thiserror        = { workspace = true }

[features]
default = []
# RFC 0032 — forward the tier-2 JIT feature down to the VM.
jit = ["weavepy-vm/jit"]

[lints]
workspace = true
